--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- top -->
         <div class="top">
             <h1 class="logo_w"><a href="./index.html">
-                    <img src="/images/logo_w.png" alt="logo">
+                    <img src="./images/logo_w.png" alt="logo">
                 </a></h1>
             <ul class="gnb">
                 <li><a href="#">HOME</a></li>
