--- a/sub/sub_page.html
+++ b/sub/sub_page.html
@@ -12,7 +12,7 @@
     <!-- top -->
     <div id="top">
         <h1 class="logo_w"><a href="../ex.html">
-                <img src="/images/logo.png" alt="logo">
+                <img src="../images/logo.png" alt="logo">
             </a></h1>
         <ul class="gnb">
             <li><a href="#">HOME</a></li>
